src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__named_arguments.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Call {
                                    callee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 9,
                                                                end: 15,
                                                                start_line: 1,
                                                                start_col: 10,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 9,
                                                    end: 15,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 9,
                                            end: 15,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    args: [
                                        CallArg {
                                            name: Some(
                                                Spanned {
                                                    node: SymbolU32 {
                                                        value: 3,
                                                    },
                                                    span: Span {
                                                        start: 16,
                                                        end: 21,
                                                        start_line: 1,
                                                        start_col: 17,
                                                    },
                                                },
                                            ),
                                            value: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 10,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 23,
                                                            end: 25,
                                                            start_line: 1,
                                                            start_col: 24,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 23,
                                                    end: 25,
                                                    start_line: 1,
                                                    start_col: 24,
                                                },
                                            },
                                            span: Span {
                                                start: 16,
                                                end: 25,
                                                start_line: 1,
                                                start_col: 17,
                                            },
                                        },
                                        CallArg {
                                            name: Some(
                                                Spanned {
                                                    node: SymbolU32 {
                                                        value: 4,
                                                    },
                                                    span: Span {
                                                        start: 27,
                                                        end: 33,
                                                        start_line: 1,
                                                        start_col: 28,
                                                    },
                                                },
                                            ),
                                            value: Expr {
                                                kind: Literal(
                                                    Literal {
                                                        kind: Int {
                                                            value: 20,
                                                            suffix: None,
                                                        },
                                                        span: Span {
                                                            start: 35,
                                                            end: 37,
                                                            start_line: 1,
                                                            start_col: 36,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 35,
                                                    end: 37,
                                                    start_line: 1,
                                                    start_col: 36,
                                                },
                                            },
                                            span: Span {
                                                start: 27,
                                                end: 37,
                                                start_line: 1,
                                                start_col: 28,
                                            },
                                        },
                                    ],
                                },
                                span: Span {
                                    start: 9,
                                    end: 38,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 40,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 40,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 40,
        start_line: 1,
        start_col: 1,
    },
}
